--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>lab 0, part 1</title>
+        <title>lab 0</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="part1.css">
+        <link rel="stylesheet" href="lab0.css">
     </head>
     <body>
-    <ol>
-        <li><a href="part1.html">Part 1</a>
-        <li><a href="part2.html">Part 2</a>
-        <li><a href="part3.html">Part 3</a>
-    </ol>
+        <h3>Part 1</h3>
+        <!-- write your part 1 code within the div below -->
+        <div>
+            replace this with your part 1 html
+        </div>
+
+        <br><br>
+        <h3>Part 2</h3>
+        <!-- write your part 2 code within the div below -->
+        <div>
+            replace this with your part 2 html
+        </div>
+
+        <br><br>
+        <h3>Part 3</h3>
+        <!-- write your part 3 code within the div below -->
+        <div>
+            replace this with your part 3 html
+        </div>
     </body>
 </html>
