--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <br><br>
-        <h3>Part 3</h3>
+        <h3>Challenge problem (Part 3, optional)</h3>
         <!-- write your part 3 code within the div below -->
         <div>
             replace this with your part 3 html
